# smart_nta

./: .gitignore  README.md  smart_nta.code-workspace
standalone/: CMakeLists.txt  CMakePresets.json  standalone.code-workspace
standalone/include/: hl_api.h
standalone/src/: CMakeLists.txt  pkt_capture_ops.c  pkt_capture_ops.h  smart_nta.c
